
	* Source/GSFFCallInvocation.m (gs_method_for_receiver_and_selector): 
	Correct test for class.

	* Source/GNUmakefile (AUTHORS): Remove target.
	* AUTHORS: Remove.
	* Admin/: Remove.
	* configure.bat: Likewise.

2002-01-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Header/Foundation/GSXML.h: Correction standards complience
	* Source/GSXML.m: A few documentation tidyups
	* Tools/autogsdoc.m: Some tidyups for improved performance.

2002-01-02  Adam Fedor  <fedor@gnu.org>

	* configure.in: Show openssl as enabled by default in help. Check for
	more headers.
	* Source/NSTask.m: Move #includes to front, remove redundancies.

	* Source/GSXML.m ([(non-libxml)GSXMLNode +forwardInvocation]):
	Implement.

	* Documentation/GNUmakefile: Remove gnustep-base.texi
	* Documentation/install.texi: Update.
	* Documentation/news.texi: Likewise.

	* Tools/autogsdoc.m (main): When no libxml, abort with a useful error
	message.

2002-01-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSXML.m: Tidied some methods and added autogsdoc comments.
	* Source/NSData.[hm]: implement ([-writeToURL:atomically:])
	* Source/GSXML.[hm]: Tidy document API to be more consistent
	with other classes.  Add some autogsdoc comments.
	* Tools/AGSIndex.m: Bugfix in setting links to superclasses.
	* Tools/AGSOutput.m: Infinite recursion fix.

2002-01-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GNUmakefile: Use new -Standards flag for autogsdoc
	* Tools/AGSparser.[hm]: New support for standards and some tidyups
	* Tools/AGSHtml.[hm]: Improved output and simplified a little.
	* Tools/autogsdoc.m: New Standards flag to turn on support for
	generation of standards complience notes in documentation.

Tue Jan  1 11:18:35 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSFileManager.m (custom_strdup): New inline function
	to simplify code.  (append_file_to_path): Use it.
	([NSDirectoryEnumerator -initWithDirectoryPath:
	recurseIntoSubdirectories:followSymlinks:justContents:]):
	Idem.