@@ -43,6 +43,6 @@
 - (void) setGlobalRef: (NSString*)ref type: (NSString*)type;
 - (void) setUnitRef: (NSString*)ref type: (NSString*)type;
 - (NSDictionary*) unitRef: (NSString*)ref type: (NSString*)type;
-- (NSString*) unitRef: (NSString*)ref type: (NSString*)type unit: (NSString*)u;
+- (NSString*) unitRef: (NSString*)ref type: (NSString*)type unit: (NSString**)u;
 @end
 #endif
