@@ -18,7 +18,11 @@ Thu Jan  3 19:38:42 2002  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* Header/Foundation/GSXML.h: Correction standards complience
 	* Source/GSXML.m: A few documentation tidyups
-	* Tools/autogsdoc.m: Some tidyups for improved performance.
+	* Tools/autogsdoc.m: Some tidyups for improved performance
+	and added code to relocate html documents.
+	* Source/AGSIndex.[hm]: Minor API change to ease index handling,
+	bugfix for class index generation.
+	* Source/AGSHtml.m: Made index handling more consistent.
 
 2002-01-02  Adam Fedor  <fedor@gnu.org>
 
